tests/errors/first_stage/label/const_definition/const_definition.am
const: .define x = 2
